<resources>
    <string name="app_name">ApplicationTest</string>
    <string name="action_settings">Settings</string>

    <string name="take_picture">Take a Picture</string>
    <string name="picture_list">Picture List</string>
    <string name="visualizer">Visualizer</string>
    <string name="edit_description">Edit Description!</string>
    <string name="save_description">Save Description</string>
    <string name="add_edit_description">Add or Edit Description</string>
    <string name="save_picture">Do you want to save the picture? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="picture_saved">Pictured Saved</string>

    <string name="customize_levels">Customize Levels</string>
    <string name="custom_level_desc">Further customize the sound using the sliders below</string>
    <string name="plus_9_db">+9dB</string>
    <string name="minus_9_db">-9dB</string>
    <string name="sixty">60</string>
    <string name="two_hundred_fifty">250</string>
    <string name="five_hundred">500</string>
    <string name="one_k">1K</string>
    <string name="two_k">2K</string>
    <string name="four_k">4K</string>
    <string name="eight_k">8K</string>
    <string name="sixteen_k">16K</string>
    <string name="hertz">Hz</string>
    <string name="select_preset">Select Preset</string>
    <string name="select_preset_desc">Select from a range of presets that best suits your listening preference</string>
    <string name="game">Game</string>
    <string name="movie">Movie</string>
    <string name="music">Music</string>
</resources>
