<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/picture_taken"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:layout_margin="@dimen/normal_margin"/>

        <Button
            android:id="@+id/capture"
            style="@style/AppTheme.Button"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/take_picture"/>

        <LinearLayout
            android:id="@+id/confirmation_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:visibility="gone"
            android:background="@drawable/edit_text_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                android:gravity="start"
                android:text="@string/save_picture"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                android:gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/yes"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/yes"/>

                <Button
                    android:id="@+id/no"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/no"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>